RESOLVED FIXED88214
[GTK] Memory leak in WebKitWebView
https://bugs.webkit.org/show_bug.cgi?id=88214
Summary [GTK] Memory leak in WebKitWebView
Sudarsana Nagineni (babu)
Reported 2012-06-04 00:04:33 PDT
It seems GeolocationClientMock is leaking here. ==769== 248 (208 direct, 40 indirect) bytes in 1 blocks are definitely lost in loss record 9,398 of 10,697 ==769== at 0x4C2B1C7: operator new(unsigned long) (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==769== by 0x6D3569E: webkit_web_view_init(_WebKitWebView*) (webkitwebview.cpp:3542) ==769== by 0xC366907: g_type_create_instance (gtype.c:1884) ==769== by 0xC34B0B8: g_object_constructor (gobject.c:1849) ==769== by 0xC34C6E3: g_object_newv (gobject.c:1713) ==769== by 0xC34CEC5: g_object_new_valist (gobject.c:1830) ==769== by 0xC34D1D3: g_object_new (gobject.c:1545) ==769== by 0x468525: self_scrolling_webkit_web_view_new (SelfScrollingWebKitWebView.cpp:61) ==769== by 0x46087A: createWebView() (DumpRenderTree.cpp:1278) ==769== by 0x460EC7: main (DumpRenderTree.cpp:1371) ==769==
Attachments
patch (2.71 KB, patch)
2012-06-04 01:40 PDT, Sudarsana Nagineni (babu)
no flags
Archive of layout-test-results from ec2-cr-linux-02 (684.32 KB, application/zip)
2012-06-04 03:48 PDT, WebKit Review Bot
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-06-04 01:40:57 PDT
Created attachment 145539 [details] patch GeolocationClientMock is now owned by WebView so it will be released when the view is deleted.
WebKit Review Bot
Comment 2 2012-06-04 03:48:40 PDT
Comment on attachment 145539 [details] patch Attachment 145539 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12899189 New failing tests: http/tests/media/media-source/video-media-source-event-attributes.html
WebKit Review Bot
Comment 3 2012-06-04 03:48:44 PDT
Created attachment 145556 [details] Archive of layout-test-results from ec2-cr-linux-02 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-02 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Sudarsana Nagineni (babu)
Comment 4 2012-06-04 05:26:29 PDT
(In reply to comment #2) > New failing tests: > http/tests/media/media-source/video-media-source-event-attributes.html Looks like test failure doesn't relate to this patch.
WebKit Review Bot
Comment 5 2012-06-04 08:15:58 PDT
Comment on attachment 145539 [details] patch Clearing flags on attachment: 145539 Committed r119397: <http://trac.webkit.org/changeset/119397>
WebKit Review Bot
Comment 6 2012-06-04 08:16:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.