[GTK] Memory leak in WebKitWebView https://bugs.webkit.org/show_bug.cgi?id=88214

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-06-04
Reviewed by Martin Robinson.

Fixed a memory leak in WebKitWebView by making
GeolocationClientMock to be owned by the WebView.

* webkit/webkitwebview.cpp:
(webkit_web_view_init):
* webkit/webkitwebviewprivate.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@119397 bbb929c8-8fbe-4397-9dbb-9b2b20218538