third_party/WebKit/Source/WebKit/gtk/webkit/webkitwebview.cpp
@@ -62,7 +62,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "FrameView.h"
 #include "GOwnPtrGtk.h"
 #include "GeolocationClientGtk.h"
-#include "GeolocationClientMock.h"
 #include "GeolocationController.h"
 #include "GraphicsContext.h"
 #include "GtkUtilities.h"
@@ -3540,9 +3539,9 @@ static void webkit_web_view_init(WebKitWebView* webView)
 
 #if ENABLE(GEOLOCATION)
     if (DumpRenderTreeSupportGtk::dumpRenderTreeModeEnabled()) {
-        GeolocationClientMock* mock = new GeolocationClientMock;
-        WebCore::provideGeolocationTo(priv->corePage, mock);
-        mock->setController(GeolocationController::from(priv->corePage));
+        priv->geolocationClientMock = adoptPtr(new GeolocationClientMock);
+        WebCore::provideGeolocationTo(priv->corePage, priv->geolocationClientMock.get());
+        priv->geolocationClientMock.get()->setController(GeolocationController::from(priv->corePage));
     } else
         WebCore::provideGeolocationTo(priv->corePage, new WebKit::GeolocationClient(webView));
 #endif
