third_party/WebKit/Source/WebKit/gtk/webkit/webkitwebviewprivate.h
@@ -26,6 +26,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "AcceleratedCompositingContext.h"
 #include "FullscreenVideoController.h"
+#include "GeolocationClientMock.h"
 #include "GtkClickCounter.h"
 #include "GtkDragAndDropHelper.h"
 #include "Page.h"
@@ -112,6 +113,10 @@ struct _WebKitWebViewPrivate {
 
 #if ENABLE(MEDIA_STREAM)
     OwnPtr<WebKit::UserMediaClientGtk> userMediaClient;
+#endif
+
+#if ENABLE(GEOLOCATION)
+    OwnPtr<WebCore::GeolocationClientMock> geolocationClientMock;
 #endif
 };
 
